fix background resizing and z-index ordering

--- a/less/style.less
+++ b/less/style.less
@@ -8,7 +8,7 @@
 @accent2_dark: #2980b9;
 
 @boxsize: 100px;
-@duration: 64s;
+@duration: 128s;
 
 body {
   font-family: 'Roboto', sans-serif;
@@ -17,14 +17,25 @@ body {
 
 h1, h2 {
   font-family: 'Fjalla One', sans-serif;
-  visibility: hidden;
 }
 
 .lead {
-    visibility: hidden;
 }
 
 .cover {
+}
+
+.site-wrapper {
+
+}
+
+.site-background {
+
+}
+
+.site-wrapper-inner {
+  position: relative;
+  z-index: 2;
 }
 
 .btn-success {
@@ -32,7 +43,7 @@ h1, h2 {
 }
 
 .block-links {
-  visibility: hidden;
+
 }
 
 .block-link {
@@ -122,6 +133,7 @@ svg {
     top: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
 }
 
 path {
@@ -133,18 +145,6 @@ circle {
   pointer-events: none;
 }
 
-/* original colors
-.q0-9 { fill: fadeout(rgb(197,27,125), @fade); }
-.q1-9 { fill: fadeout(rgb(222,119,174), @fade); }
-.q2-9 { fill: fadeout(rgb(241,182,218), @fade); }
-.q3-9 { fill: fadeout(rgb(253,224,239), @fade); }
-.q4-9 { fill: fadeout(rgb(247,247,247), @fade); }
-.q5-9 { fill: fadeout(rgb(230,245,208), @fade); }
-.q6-9 { fill: fadeout(rgb(184,225,134), @fade); }
-.q7-9 { fill: fadeout(rgb(127,188,65), @fade); }
-.q8-9 { fill: fadeout(rgb(77,146,33), @fade); }
-*/
-
 .q0-9 { fill: fadeout(#1abc9c, @fade); }
 .q1-9 { fill: fadeout(#2ecc71, @fade); }
 .q2-9 { fill: fadeout(#3498db, @fade); }
@@ -154,4 +154,3 @@ circle {
 .q6-9 { fill: fadeout(#e74c3c, @fade); }
 .q7-9 { fill: fadeout(#ecf0f1, @fade); }
 .q8-9 { fill: fadeout(#95a5a6, @fade); }
-
